tests/NormalTests/paczka1/fuzzy1/16108283.err
Error in line 1: 2cWJo S275 81,0
Error in line 4: 6pN S275 52,5
Error in line 20: 6pN S70 6,9
Error in line 22: (RO S555 47,4
